tests/grammar/valid/v3_multiline-declaration.c
#include <stdint.h>
#include <stdio.h>

int32_t espaceChar
        = 4;