tests/grammar/invalid/v5_invalid_array_definition_multiline1.c
#include <stdint.h>
#include <stdio.h>

int tab
[5];
